--- a/src/app/country/pages/info-pais/info-pais.component.html
+++ b/src/app/country/pages/info-pais/info-pais.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="!pais; else divCard" class="alert alert-primary">Cargando...</div>
 
 <ng-template #divCard>
-  <div class="container p-4">
+  <h2>Informacion del pais</h2>
+  <hr />
+  <div class="container p-4 animate__animated animate__fadeIn">
     <div class="card mb-3">
       <div class="card-header bg-transparent">
         <h2>{{ pais.name.common }}</h2>
@@ -26,13 +28,17 @@
             <strong>cca2: </strong> {{ pais.cca2 }}
           </li>
           <li class="list-group-item mb-4">
-            <strong>Map: </strong> <a href="{{ pais.maps.googleMaps }}">{{ pais.maps.googleMaps }}</a>
+            <strong>Map: </strong>
+            <a href="{{ pais.maps.googleMaps }}">{{ pais.maps.googleMaps }}</a>
           </li>
         </ul>
         <h3>Traducciones:</h3>
         <div class="row">
           <div class="col">
-            <span *ngFor="let item of translations" class="badge bg-primary m-1 p-2">
+            <span
+              *ngFor="let item of translations"
+              class="badge bg-primary m-1 p-2"
+            >
               {{ item.common }}
             </span>
           </div>
@@ -44,8 +50,9 @@
     </div>
   </div>
 
-
+  <!--
   <pre>
-    {{ pais | json }}
+    {# {{ pais | json }} #}
   </pre>
+  -->
 </ng-template>
