--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <app-sidebar></app-sidebar>
   </div>
 
-  <div class="col">
+  <div class="col-9 container__right">
     <router-outlet></router-outlet>
   </div>
 </div>
