--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -1,5 +1,5 @@
 .card {
-  background: floralwhite;
+  background: $gray-700;
   &-header {
     display: flex;
     justify-content: space-between;
